fix: correct letter-spacing in pet names in pet cards

--- a/shelter/pages/main/style.scss
+++ b/shelter/pages/main/style.scss
@@ -383,6 +383,7 @@ h5{
             color: $color-dark-1;
             font-size: 20px;
             line-height: 23px;
+            letter-spacing: 0.06em;
             margin-top: 30px;
             margin-bottom: 30px;
           }
